change sidebar titles in payments

--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Accept Payments via Collect Request
-page_title: UMAP - Payments - Accept Payments via Collect Request
+sidebar_title: Collect Request
+page_title: UMAP - Payments - Collect Request
 order: 2
 visible_in_sidebar: true
 ---
