--- a/content/payments/umap/payments/intent-qr.mdx
+++ b/content/payments/umap/payments/intent-qr.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Accept payments via Intent/QR
-page_title: UMAP - Payments - Accept payments via Intent/QR
+sidebar_title: Intent/QR
+page_title: UMAP - Payments - Intent/QR
 order: 1
 visible_in_sidebar: true
 ---
