--- a/content/payments/umap/payments/intent-qr/conditional-flows.mdx
+++ b/content/payments/umap/payments/intent-qr/conditional-flows.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Conditional Flows for Post-Transaction Processes
-page_title: UMAP - Payments - Conditional Flows for Post-Transaction Processes
+sidebar_title: Conditional Flows
+page_title: UMAP - Payments - Conditional Flows
 order: 1
 visible_in_sidebar: true
 ---
