feat(UPI-1144): add apis for otm, recurring, multi-debit mandate creation under umap mandates
Changes:
- add apis for intent based, collect based mandate creation for otm, recurring, multi-debit mandates
under umap mandates page
- remove "API" from sidebar titles for umap api pages

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Check VPA Availability API
+sidebar_title: Check VPA Availability
 page_title: UMAP - Merchant Onboarding - Check VPA Availability API
 order: 3
 visible_in_sidebar: true
