--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Create Merchant API
+sidebar_title: Create Merchant
 page_title: UMAP - Merchant Onboarding - Create Merchant API
 order: 2
 visible_in_sidebar: true
