--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Create VPA API
+sidebar_title: Create VPA
 page_title: UMAP - Merchant Onboarding - Create VPA API
 order: 4
 visible_in_sidebar: true
