--- a/content/payments/umap/refunds-disputes/check-customer-vpa-verification-status-api.mdx
+++ b/content/payments/umap/refunds-disputes/check-customer-vpa-verification-status-api.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Check Customer VPA Verification Status API
+sidebar_title: Check Status
 page_title: UMAP - Refunds & Disputes - Check Customer VPA Verification Status API
 order: 4
 visible_in_sidebar: true
 ---
 
-## Create Refund API
+## Check Customer VPA Verification Status API
 
 <table>
     <tbody>
