--- a/content/payments/umap/refunds-disputes/create-refund-api.mdx
+++ b/content/payments/umap/refunds-disputes/create-refund-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Create Refund API
+sidebar_title: Create Refund
 page_title: UMAP - Refunds & Disputes - Create Refund API
 order: 1
 visible_in_sidebar: true
