--- a/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
+++ b/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Fetch Dispute API
+sidebar_title: Fetch Dispute
 page_title: UMAP - Refunds & Disputes - Fetch Dispute API
 order: 2
 visible_in_sidebar: true
