--- a/content/payments/umap/transaction-monitoring/check-status-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Check Status API
+sidebar_title: Check Status
 page_title: UMAP - Transaction Monitoring - Check Status API
 order: 1
 visible_in_sidebar: true
