--- a/content/payments/umap/transaction-monitoring/check-status-history-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-history-api.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Check Status History API
+sidebar_title: Check Status History
 page_title: UMAP - Transaction Monitoring - Check Status History API
 order: 2
 visible_in_sidebar: true
