fix(UPI-1144): shorten sidebar titles for mandates
Changes:
- shorten sidebar titles for mandates

Closes UPI-1144

--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: One Time Mandates
+sidebar_title: One Time
 page_title: UMAP - Mandates - One Time Mandates
 order: 4
 visible_in_sidebar: true
