--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Single Block Multi Debit Mandates
+sidebar_title: Single Block Multi Debit
 page_title: UMAP - Mandates - Single Block Multi Debit Mandates
 order: 6
 visible_in_sidebar: true
