--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Recurring Mandates
+sidebar_title: Recurring
 page_title: UMAP - Mandates - Recurring Mandates
 order: 5
 visible_in_sidebar: true
