fix(UPI-1144): rename umap payment apis
Changes:
- rename umap fetch payment by id api
- rename umap fetch last payment by product instance id api

Closes UPI-1144

--- a/content/payments/umap/transaction-monitoring/check-status-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-api.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/payments/&#123;id&#125;</code>
+                <code>/merchants/payments/product-instances/&#123;id&#125;/last</code>
             </td>
         </tr>
         <tr>
@@ -49,6 +49,7 @@ visible_in_sidebar: true
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
+  "customerAccountType": "savings",
   "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -56,8 +57,12 @@ visible_in_sidebar: true
   "merchantVpa": "test-auto-beibfev2oq@okokaxis",
   "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "reason": {
-    "failureReason": "unable-to-fulfill-request",
-    "npciErrCode": "YG"
+    "code": "unable-to-fulfill-request",
+    "desc": "unable-to-fulfill-request",
+    "npciErrCode": "YG",
+    "npciErrDesc": "MERCHANT ERROR (PAYEE PSP)",
+    "npciRespCode": "YG",
+    "npciRespDesc": "MERCHANT ERROR (PAYEE PSP)"
   },
   "refId": "1240689979139556558",
   "rrn": "124068997913",
@@ -67,6 +72,6 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchById"target="_blank">
+<a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"target="_blank">
 <code>Check Status API</code> ↗
 </a>
