Test children as cards

--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -5,7 +5,6 @@ order: 3
 visible_in_sidebar: true
 ---
 
-
 Landing page where we explain basics of payments
 
 ## Transaction Statuses
@@ -20,6 +19,6 @@ The UMAP platform ensures transparency throughout the transaction process by def
 
 **Payment Failed:** Another terminal state, indicating that the transaction did not go through. Reasons for failure might include business declines or technical issues. In this scenario, the merchant has not received the funds, and the goods or services should not be delivered. Merchants are advised to inform the customer of the failure and suggest retrying the transaction.
 
-
 Understanding these statuses allows merchants and stakeholders to effectively track and manage their transactions, ensuring a smooth operational flow and an optimal customer experience.
 
+<NestedEndpoints />
