Changed keyName in API body

--- a/content/data/account-aggregator/api-integration/account-availability-apis.mdx
+++ b/content/data/account-aggregator/api-integration/account-availability-apis.mdx
@@ -27,7 +27,7 @@ Headers:
     x-product-instance-id: <product instance id>
 Body:
 {
-    "phoneNumber": "9999999999",
+    "mobileNumber": "9999999999",
 }`}
 </CodeBlockWithCopy>
 <Row>
