fix(UPI-1144): turn bold (**) headings into mark down (#) headings
Changes:
- turn bold (**) headings into mark down (#) headings

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding/additional-flows.mdx
+++ b/content/payments/umap/merchant-onboarding/additional-flows.mdx
@@ -7,6 +7,8 @@ visible_in_sidebar: true
 
 ## Additional Flows
 
-**Merchant Txn Status Updation (updateTxnStatus API):**If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA. 
+### Merchant Txn Status Updation (updateTxnStatus API)
+If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA. 
 
-**Merchant Record Updation(updateConfig merchant API):**This API can be called to update the information associated with the merchant like settlement configs, KYC information that may be required for accepting different payment instruments on UPI.
+### Merchant Record Updation(updateConfig merchant API)
+This API can be called to update the information associated with the merchant like settlement configs, KYC information that may be required for accepting different payment instruments on UPI.
