--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -5,6 +5,7 @@ order: 2
 visible_in_sidebar: true
 ---
 
+## Collect Request
 
 The Collect Request in UPI is a customer-driven payment mode where the merchant initiates a transaction by providing the customer's Virtual Payment Address (VPA). Upon initiation, the customer receives a notification on their UPI app to authorize the transaction, facilitating a seamless payment completion.
 
@@ -13,7 +14,8 @@ The Collect Request in UPI is a customer-driven payment mode where the merchant 
 </a>
 <br/>
 
-**Collect Request Creation(create Collect API):** A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
+### Collect Request Creation(create Collect API)
+A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
 
 
 <br/>
@@ -22,6 +24,7 @@ The Collect Request in UPI is a customer-driven payment mode where the merchant 
 </a>
 <br/>
 
-**Fetch Collect Request(fetchById API):** After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
+### Fetch Collect Request(fetchById API)
+After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
 
 
