--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -13,15 +13,25 @@ UMAP empowers merchants with direct API access to issue refunds and contest disp
 
 UMAP is fully integrated with the National Payments Corporation of India's (NPCI) Unified Dispute & Issue Resolution (UDIR) framework. This integration allows merchants to handle refunds and resolve disputes efficiently, enhancing customer satisfaction while minimizing the risk of chargebacks and false disputes.
 
-**Dispute Open:** The process begins when UMAP informs a merchant of a customer-initiated dispute concerning a transaction. At this stage, the merchant is given a specific timeframe to either contest the dispute or accept it.
+#### Dispute Open
 
-**Dispute In Review:** If the merchant opts to contest the dispute, the case moves to the "In Review" status. Here, the merchant is required to submit evidence supporting their position. This evidence is then reviewed and presented to the customer as part of the resolution process.
+The process begins when UMAP informs a merchant of a customer-initiated dispute concerning a transaction. At this stage, the merchant is given a specific timeframe to either contest the dispute or accept it.
 
-**Dispute Won:** This status indicates that the merchant has successfully contested the dispute, with the submitted evidence being sufficient to resolve the dispute in their favor. No further action is required from the merchant at this point.
+#### Dispute In Review
 
-**Dispute Lost:** If the merchant is unable to provide convincing evidence, or if the evidence is deemed insufficient, the dispute is resolved in favor of the customer. The merchant must then refund the disputed amount to the customer.
+If the merchant opts to contest the dispute, the case moves to the "In Review" status. Here, the merchant is required to submit evidence supporting their position. This evidence is then reviewed and presented to the customer as part of the resolution process.
 
-**Dispute Closed:** This is the conclusive stage of the dispute resolution process. It is reached after a dispute is either won or lost. In cases where the dispute is won by the merchant, this status is automatically assigned without requiring any further action. Conversely, if the dispute is lost, this status is achieved once the disputed amount has been refunded to the customer.
+#### Dispute Won
+
+This status indicates that the merchant has successfully contested the dispute, with the submitted evidence being sufficient to resolve the dispute in their favor. No further action is required from the merchant at this point.
+
+#### Dispute Lost
+
+If the merchant is unable to provide convincing evidence, or if the evidence is deemed insufficient, the dispute is resolved in favor of the customer. The merchant must then refund the disputed amount to the customer.
+
+#### Dispute Closed
+
+This is the conclusive stage of the dispute resolution process. It is reached after a dispute is either won or lost. In cases where the dispute is won by the merchant, this status is automatically assigned without requiring any further action. Conversely, if the dispute is lost, this status is achieved once the disputed amount has been refunded to the customer.
 
 The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers.
 
@@ -34,13 +44,21 @@ The UMAP platform's seamless integration with the UDIR framework ensures that me
 
 UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
 
-**Refund Initiated:** This status marks the beginning of the refund process, where the merchant has successfully submitted a refund request, and it has been forwarded to NPCI for processing.
+#### Refund Initiated
 
-**Refund Pending:** At this stage, the refund is in process. Refunds are processed in cycles, and the amount to be refunded is temporarily deducted from the merchant's settlement amount. This intermediary state reflects the ongoing processing before final resolution.
+This status marks the beginning of the refund process, where the merchant has successfully submitted a refund request, and it has been forwarded to NPCI for processing.
 
-**Refund Successful:** This indicates the successful completion of the refund process by NPCI, with the funds being reverted back to the customer's bank account. It signifies the resolution of the refund request in favor of the customer.
+#### Refund Pending
 
-**Refund Failed:** If the refund process encounters issues—such as the customer's bank account being inactive or blocked—the refund fails. This status alerts the merchant to the unsuccessful refund attempt, necessitating further action to resolve the issue.
+At this stage, the refund is in process. Refunds are processed in cycles, and the amount to be refunded is temporarily deducted from the merchant's settlement amount. This intermediary state reflects the ongoing processing before final resolution.
+
+#### Refund Successful
+
+This indicates the successful completion of the refund process by NPCI, with the funds being reverted back to the customer's bank account. It signifies the resolution of the refund request in favor of the customer.
+
+#### Refund Failed
+
+If the refund process encounters issues—such as the customer's bank account being inactive or blocked—the refund fails. This status alerts the merchant to the unsuccessful refund attempt, necessitating further action to resolve the issue.
 
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/refund-statuses/refund-statuses.png"
@@ -49,9 +67,13 @@ UMAP equips merchants with a straightforward, API-based mechanism to process ref
 
 ### Refund Process
 
-**Issuing Refunds:** Merchants can initiate refunds through the create refund API by submitting the details of the original transaction. UMAP coordinates with NPCI to process the refund, ensuring the amount is returned to the customer's account.
+#### Issuing Refunds
 
-**Notification Updates:** Throughout the refund process, UMAP provides merchants with timely updates regarding the refund status, ensuring transparency and allowing merchants to keep their customers informed.
+Merchants can initiate refunds through the create refund API by submitting the details of the original transaction. UMAP coordinates with NPCI to process the refund, ensuring the amount is returned to the customer's account.
+
+#### Notification Updates
+
+Throughout the refund process, UMAP provides merchants with timely updates regarding the refund status, ensuring transparency and allowing merchants to keep their customers informed.
 
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/refund-process/refund-process.png"
@@ -66,14 +88,18 @@ Dispute Initiation: Disputes are initiated by customers and communicated to UMAP
 
 Merchants have the option to either accept or reject the dispute through UMAP:
 
-**Accepting a Dispute:** Agreeing to the dispute automatically triggers a refund to the customer for the disputed transaction.
+**Accepting a Dispute:**
+Agreeing to the dispute automatically triggers a refund to the customer for the disputed transaction.
 
-**Rejecting a Dispute:** To contest a dispute, merchants must provide transaction evidence, such as an invoice, which UMAP forwards to NPCI for review.
+**Rejecting a Dispute:**
+To contest a dispute, merchants must provide transaction evidence, such as an invoice, which UMAP forwards to NPCI for review.
 
 #### Review Outcome
 
-**Merchant Wins:** If the review process favors the merchant, the dispute is closed with no refund required.
+**Merchant Wins:**
+If the review process favors the merchant, the dispute is closed with no refund required.
 
-**Merchant Loses:** If the merchant does not prevail, a refund is issued to the customer for the disputed transaction.
+**Merchant Loses:**
+If the merchant does not prevail, a refund is issued to the customer for the disputed transaction.
 
 This comprehensive approach ensures that merchants can efficiently manage refunds and disputes, offering a streamlined mechanism to resolve customer issues directly and maintain high levels of satisfaction.
