--- a/content/payments/umap/payments/collect-request/verify-customer-vpa-api.mdx
+++ b/content/payments/umap/payments/collect-request/verify-customer-vpa-api.mdx
@@ -1,24 +1,24 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Refunds & Disputes - Check Customer VPA Verification Status API
-order: 4
+sidebar_title: Verify Customer VPA
+page_title: UMAP - Payments - Verify Customer VPA API
+order: 1
 visible_in_sidebar: true
 ---
 
-## Check Customer VPA Verification Status API
+## Verify Customer VPA API
 
 <table>
     <tbody>
         <tr>
             <th>Method</th>
             <td>
-                <code>GET</code>
+                <code>POST</code>
             </td>
         </tr>
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/customer-vpas/&#123;id&#125;</code>
+                <code>/merchants/customer-vpas/verify</code>
             </td>
         </tr>
         <tr>
@@ -42,29 +42,29 @@ visible_in_sidebar: true
     </tbody>
 </table>
 
+### Sample request
+
+<CodeBlockWithCopy language="json">
+    {`{
+    "customerVpa": "dekup@okokaxis",
+    "merchantReferenceId": "1240689979139556557"
+}`}
+</CodeBlockWithCopy>
+
 ### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
-  "customerAccountType": "savings",
   "customerName": "deku",
   "customerVpa": "ram@okhdfc",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantReferenceId": "1240689979139556557",
-  "reason": {
-    "code": "unable-to-fulfill-request",
-    "desc": "unable-to-fulfill-request",
-    "npciErrCode": "YG",
-    "npciErrDesc": "MERCHANT ERROR (PAYEE PSP)",
-    "npciRespCode": "YG",
-    "npciRespDesc": "MERCHANT ERROR (PAYEE PSP)"
-  },
   "status": "pending"
 }`}
 </CodeBlockWithCopy>
 
-<a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#fetchById"target="_blank">
-<code>Check Customer VPA Verification Status API</code> ↗
+<a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
+<code>Verify Customer VPA API</code> ↗
 </a>
