fix(UPI-1144): restructure umap mandates page
Changes:
- restructure mandates page to have only 3 sub pages (one time, recurring, single block multi debit)
- under each umap mandates sub page have 3 sub sub pages - intent based, collect based, generic operations

Closes UPI-1144

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -22,3 +22,40 @@ Some key features of our UPI Mandate Solutions are as follows -
 - Reduced mandate revocability by leveraging customer non revocability flags
 - Enhanced merchant notifications to give the correct status of a mandate for any merchant or end user action on the mandate with accurate NPCI error codes and responses in case of failures
 - Lesser mandate execution failures with automatic retries built in by default
+
+### UPI Mandate Statuses
+
+A UPI mandate will flow through the below statuses throughout its lifecycle  - 
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
+  alt="Bridge"
+/>
+
+Certain UPI Mandate flows are specific to the way a UPI mandate is created - intent/QR based or collect based. These type specific flows are - 
+- Creating a UPI mandate
+- Updating a UPI mandate and 
+
+Some operations on UPI mandates are generic and not dependent on the mode of mandate creation. These are
+- Sending pre-debit notification on a UPI mandate
+- Debiting a UPI mandate
+- Revoking a UPI mandate
+- Pause/Unpause flows
+
+### Collect Based UPI Mandates
+
+These are UPI mandates which are powered via the NPCI collect flow for mandate creation. A simple end user journey for this mandate created via a collect request  is depicted below - 
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/collect-based-mandate-flow/collect-based-mandate-flow.png"
+  alt="Bridge"
+/>
+
+### Intent Based UPI Mandates
+
+These are UPI mandates which are powered via the NPCI intent flow for mandate creation. A simple end user journey for this mandate created via in-app intent is depicted below -
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/intent-based-mandate-flow/intent-based-mandate-flow.png"
+  alt="Bridge"
+/>
