--- a/content/payments/umap/mandates/otm/generic.mdx
+++ b/content/payments/umap/mandates/otm/generic.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Generic
+sidebar_title: Generic Operations
 page_title: UMAP - Mandates - Generic Operations
 order: 3
 visible_in_sidebar: true
