--- a/content/payments/umap/mandates/otm/intent-based.mdx
+++ b/content/payments/umap/mandates/otm/intent-based.mdx
@@ -1,11 +1,13 @@
 ---
 sidebar_title: Intent Based
-page_title: UMAP - Mandates - Intent Based Recurring Mandate Creation
+page_title: UMAP - Mandates - Intent Based One Time Mandate
 order: 1
 visible_in_sidebar: true
 ---
 
-## Intent Based Recurring Mandate Creation
+## Intent Based One Time Mandate
+
+### Create
 
 The process for mandate creation is described in the below diagram:
 
@@ -16,7 +18,9 @@ The process for mandate creation is described in the below diagram:
 
 The merchant will have to call the **<i>create Mandates API</i>** with the correct set of parameters. Post this, they will receive webhooks for two events **<i>mandate initiated, mandate registration confirmed.</i>** 
 
-### Create Recurring Mandate via Intent API
+Please refer to the Document Reference section for checking the API reference and the notifications.
+
+#### Create One Time Mandate via Intent API
 
 <table>
     <tbody>
@@ -53,7 +57,7 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
     </tbody>
 </table>
 
-#### Sample request
+##### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -70,7 +74,7 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
     "endDate": "02012008",
     "expireAfter": 120,
     "firstExecutionAmount": 1000,
-    "frequency": "weekly",
+    "frequency": "one time",
     "initiationMode": "01",
     "maxAmountLimit": 1000,
     "merchantReferenceId": "ABC1234789",
@@ -78,14 +82,14 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
     "productConfigId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
     "purpose": "14",
     "recurrenceRule": "on",
-    "recurrenceValue": 1,
+    "recurrenceValue": 0,
     "shareToPayee": false,
     "startDate": "02012006",
     "transactionNote": "Transaction note"
 }`}
 </CodeBlockWithCopy>
 
-### Sample response
+##### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -103,7 +107,7 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
   "endDate": "02012008",
   "expireAfter": 120,
   "firstExecutionAmount": 1000,
-  "frequency": "weekly",
+  "frequency": "one time",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "initiationMode": "01",
   "intentLink": "upi://mandate?pa=deku040920232@okokaxis&pn=merchant-1&validitystart=31121995&validityend=31121996&am=100.00&amrule=MAX&recur=one%20time&recurvalue=0&recurtype=on&tr=SETgv8wOOCElAtpzfbAEXqcKvN8QPfunAhI&cu=INR&mc=1234&mode=04&purpose=14&rev=N&share=Y&qrexpire=04092023&block=N&orgid=000000&version=2.0&txnType=create&tid=SETgv8wOOCElAtpzfbAEXqcKvN8QPfunAhI",
@@ -114,7 +118,7 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
   "productConfigId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "purpose": "14",
   "recurrenceRule": "on",
-  "recurrenceValue": 1,
+  "recurrenceValue": 0,
   "shareToPayee": false,
   "startDate": "02012006",
   "status": "pending",
@@ -125,4 +129,90 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
 
 <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#create"target="_blank">
 <code>Create Mandate API</code> ↗
+</a>
+
+### Update
+
+There are only two updates possible on a UPI mandate
+- Changing the mandate end date
+- Changing the mandate amount
+
+The process for updating a mandate is described in the below diagram:
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate-update-intent/mandate-update-intent.png"
+  alt="Bridge"
+/>
+
+The merchant will have to call the **<i>modify Mandates API</i>** with the correct set of parameters. Post this, they will receive webhooks for three events: **<i>update operation initiated, update operation confirmation and mandate status notification.</i>**
+
+#### Update One Time Mandate via Intent API
+
+<table>
+    <tbody>
+        <tr>
+            <th>Method</th>
+            <td>
+                <code>PUT</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Path</th>
+            <td>
+                <code>/merchants/mandates&#123;mandateId&#125;modify</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Header</th>
+            <td>
+                <code>merchantId</code><br/>
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+                Generate this token using <a
+                    href="/payments/upi-deeplinks/resources/oauth"
+                    target="_blank">
+                    OAuth
+                </a> or <a
+                    href="/payments/upi-deeplinks/resources/jwt"
+                    target="_blank">
+                    JWT
+                </a>.<br />
+                <br />
+                <code>Content-Type</code>—will be <code>application/json</code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+##### Sample request
+
+<CodeBlockWithCopy language="json">
+    {`{
+    "amountLimit": 1000,
+    "endDate": "02012006",
+    "expireAfter": 120,
+    "merchantReferenceId": "ABC1234789"
+}`}
+</CodeBlockWithCopy>
+
+##### Sample response
+
+<CodeBlockWithCopy language="json">
+    {`{
+  "amountLimit": 1000,
+  "endDate": "02012006",
+  "expireAfter": 120,
+  "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "intentLink": "upi://mandate?pa=deku040920232@okokaxis&validitystart=31121995&validityend=30122025&am=901.00&amrule=max&recur=one%20time&recurvalue=0&recurtype=on&cu=INR&mc=1234&mode=01&purpose=14&rev=N&block=N&txnType=update&umn=SETUS7mxYHK1A6yXhxJsoKM7yxKqC2r0&tid=SETM3Iij4WQrtEUbOUFkTpQp2EpR5wqy5Ou",
+  "mandateId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantReferenceId": "ABC1234789",
+  "mode": "qr",
+  "status": "pending",
+  "txnId": "BTTZrc5gDFkuCr3n3I0ey4aNtzLOLR7K7aR",
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp"
+}`}
+</CodeBlockWithCopy>
+
+<a href="/payments/umap/api-reference#/category~mandates/operation~mandates#modify"target="_blank">
+<code>Update Mandate API</code> ↗
 </a>
