--- a/content/payments/umap/mandates/recurring/collect-based.mdx
+++ b/content/payments/umap/mandates/recurring/collect-based.mdx
@@ -1,11 +1,13 @@
 ---
 sidebar_title: Collect Based
-page_title: UMAP - Mandates - Collect Based Recurring Mandate Creation
+page_title: UMAP - Mandates - Collect Based Recurring Mandate
 order: 2
 visible_in_sidebar: true
 ---
 
-## Collect Based Recurring Mandate Creation
+## Collect Based Recurring Mandate
+
+### Create
 
 The process for mandate creation is described in the below diagram: 
 
@@ -16,7 +18,7 @@ The process for mandate creation is described in the below diagram:
 
 The merchant will have to call the **<i>create Mandates API</i>** with the correct set of parameters. Post this, they will receive webhooks for two events **<i>mandate registration confirmation</i>** and **<i>mandate status notification.</i>**
 
-### Create One Time Mandate via Collect API
+#### Create Recurring Mandate via Collect API
 
 <table>
     <tbody>
@@ -53,7 +55,7 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
     </tbody>
 </table>
 
-#### Sample request
+##### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -85,7 +87,7 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
 }`}
 </CodeBlockWithCopy>
 
-### Sample response
+##### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -124,4 +126,83 @@ The merchant will have to call the **<i>create Mandates API</i>** with the corre
 
 <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#create"target="_blank">
 <code>Create Mandate API</code> ↗
+</a>
+
+### Update
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/mandate-update-collect/mandate-update-collect.png"
+  alt="Bridge"
+/>
+
+The merchant will have to call the **<i>modify Mandates API</i>** with the correct set of parameters. Post this, they will receive webhooks for two events: **<i>update operation confirmation</i>** and **<i>mandate status notification.</i>**
+
+#### Update Recurring Mandate via Collect API
+
+<table>
+    <tbody>
+        <tr>
+            <th>Method</th>
+            <td>
+                <code>PUT</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Path</th>
+            <td>
+                <code>/merchants/mandates&#123;mandateId&#125;modify</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Header</th>
+            <td>
+                <code>merchantId</code><br/>
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+                Generate this token using <a
+                    href="/payments/upi-deeplinks/resources/oauth"
+                    target="_blank">
+                    OAuth
+                </a> or <a
+                    href="/payments/upi-deeplinks/resources/jwt"
+                    target="_blank">
+                    JWT
+                </a>.<br />
+                <br />
+                <code>Content-Type</code>—will be <code>application/json</code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+##### Sample request
+
+<CodeBlockWithCopy language="json">
+    {`{
+    "amountLimit": 1000,
+    "endDate": "02012006",
+    "expireAfter": 120,
+    "merchantReferenceId": "ABC1234789"
+}`}
+</CodeBlockWithCopy>
+
+##### Sample response
+
+<CodeBlockWithCopy language="json">
+    {`{
+  "amountLimit": 1000,
+  "endDate": "02012006",
+  "expireAfter": 120,
+  "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "mandateId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantReferenceId": "ABC1234789",
+  "mode": "collect",
+  "status": "initiated",
+  "txnId": "BTTZrc5gDFkuCr3n3I0ey4aNtzLOLR7K7aR",
+  "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp"
+}`}
+</CodeBlockWithCopy>
+
+<a href="/payments/umap/api-reference#/category~mandates/operation~mandates#modify"target="_blank">
+<code>Update Mandate API</code> ↗
 </a>
