--- a/content/payments/umap/mandates/recurring/generic/notify.mdx
+++ b/content/payments/umap/mandates/recurring/generic/notify.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Pre Debit Notification
+sidebar_title: Notification
 page_title: UMAP - Mandates - Pre Debit Notification
 order: 1
 visible_in_sidebar: true
