feat(UPI-1144): add links to refunds & disputes sub pages for APIs on refunds and disputes page
Changes:
- add links to refunds & disputes sub pages for APIs on refunds and disputes page

Closes UPI-1144

--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -40,6 +40,10 @@ If the refund process encounters issues—such as the customer's bank account be
 
 Merchants can initiate refunds through the create refund API by submitting the details of the original transaction. UMAP coordinates with NPCI to process the refund, ensuring the amount is returned to the customer's account.
 
+<a href="/payments/umap/refunds-disputes/create-refund-api"target="_blank">
+<code>Create Refund API</code> ↗
+</a>
+
 #### Notification Updates
 
 Throughout the refund process, UMAP provides merchants with timely updates regarding the refund status, ensuring transparency and allowing merchants to keep their customers informed.
@@ -83,6 +87,10 @@ The UMAP platform's seamless integration with the UDIR framework ensures that me
 ### Dispute Resolution
 
 Dispute Initiation: Disputes are initiated by customers and communicated to UMAP via NPCI. Upon receiving a dispute notification, UMAP promptly informs the merchant of the dispute details.
+
+<a href="/payments/umap/refunds-disputes/fetch-dispute-api"target="_blank">
+<code>Fetch Dispute API</code> ↗
+</a>
 
 #### Merchant Response
 
