fix(UPI-1144): fix umap update mandate api endpoints
Changes:
- fix umap update mandate api endpoints

Closes UPI-1144

--- a/content/payments/umap/mandates/otm/intent-based.mdx
+++ b/content/payments/umap/mandates/otm/intent-based.mdx
@@ -159,7 +159,7 @@ The merchant will have to call the **<i>modify Mandates API</i>** with the corre
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates&#123;mandateId&#125;modify</code>
+                <code>/merchants/mandates/&#123;mandateId&#125;/modify</code>
             </td>
         </tr>
         <tr>
