fix(UPI-1144): add nested endpoints to umap mandates page
Changes:
- add nested endpoints to umap mandates page
- fix headings and sub heading sizes on umap merchant onboarding page

Closes UPI-1144

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -59,3 +59,5 @@ These are UPI mandates which are powered via the NPCI intent flow for mandate cr
   src="https://storage.googleapis.com/strapi-assets/latest/intent-based-mandate-flow/intent-based-mandate-flow.png"
   alt="Bridge"
 />
+
+<NestedEndpoints />
