--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -9,24 +9,24 @@ visible_in_sidebar: true
 
 The merchant onboarding flow is a critical process designed to seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves several key steps, from initial information collection to the final activation of the merchant’s ability to process transactions.
 
-### Information Collection
+#### Information Collection
 The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
 
-### Merchant Record Creation (Create Merchant API)
+#### Merchant Record Creation (Create Merchant API)
 Upon collecting the merchant's information, a preliminary verification is conducted. The merchant's record is then created in the UMAP system, marking the formal initiation of their onboarding journey.
 
 <a href="/payments/umap/merchant-onboarding/create-merchant-api"target="_blank">
 <code>Create Merchant API</code> ↗
 </a>
 
-### Checking VPA Availability (Check VPA Availability API)
+#### Checking VPA Availability (Check VPA Availability API)
 Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
 
 <a href="/payments/umap/merchant-onboarding/check-vpa-availability-api"target="_blank">
 <code>Check VPA Availability API</code> ↗
 </a>
 
-### VPA Creation (Create VPA API)
+#### VPA Creation (Create VPA API)
 If the VPA is available, it is created and assigned to the merchant. This final step equips the merchant with the capability to accept payments via UPI, completing the onboarding process and marking the beginning of their transaction journey on the UMAP platform.
 
 <a href="/payments/umap/merchant-onboarding/create-vpa-api"target="_blank">
@@ -40,7 +40,7 @@ By meticulously following these steps, UMAP ensures a smooth and efficient onboa
   alt="Bridge"
 />
 
-### Merchant Operations
+## Merchant Operations
 
 #### Merchant Txn Status Updation (Update Merchant Transaction Status API)
 If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA. 
