add conditional flows on the payments page

--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -25,4 +25,17 @@ Another terminal state, indicating that the transaction did not go through. Reas
 
 Understanding these statuses allows merchants and stakeholders to effectively track and manage their transactions, ensuring a smooth operational flow and an optimal customer experience.
 
+
+## Conditional Flows
+
+Conditional flows are optional steps that may be executed in response to specific scenarios post-transaction:
+
+### Dispute Retrieval (fetchById disputes API)
+If a customer raises a dispute regarding a transaction, this API call allows for the retrieval of dispute details using a unique identifier, facilitating timely resolution.
+
+### Initiate Refund (create Refund API)
+In cases where a dispute arises or as a necessary step in the transaction process, a refund can be initiated. This API, typically prompted by the merchant, reverses the transaction amount to the customer.
+
+These steps and conditional flows ensure merchants can efficiently manage transactions, from initiation to resolution, providing a streamlined payment experience for customers through the UMAP platform.
+
 <NestedEndpoints />
