feat(UPI-1144): add content for umap merchant api sub pages
Changes:
- add content for umap merchant api sub pages under merchant onboarding
page

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -7,6 +7,8 @@ visible_in_sidebar: true
 
 ## Check VPA Availability API
 
+VPAs act as unique identifiers in the UPI ecosystem. This item can be used to validate the availability of a VPA to check if it can be associated with a merchant.
+
 <table>
     <tbody>
         <tr>
