--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -7,6 +7,8 @@ visible_in_sidebar: true
 
 ## Create Merchant API
 
+Create merchants in UPI with this API by providing business details & aggregator ID for onboarding and enabling transactions for the merchant.
+
 <table>
     <tbody>
         <tr>
