--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -7,6 +7,8 @@ visible_in_sidebar: true
 
 ## Create VPA API
 
+This API can be used to assign a VPA to a merchant which will serve as the merchant identifier across all players in the UPI ecosystem
+
 <table>
     <tbody>
         <tr>
